Fix sizing and alignment issue on the postersliding page

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,13 @@
-* {
+@import 'modern-normalize/modern-normalize.css';
+
+/* * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-/* Ensure the body takes the full width */
-body {
+Ensure the body takes the full width */
+/* body {
   height: 100vh;
   width: 100vw;
-}
+} */
